# onj_v3

./: .gitignore  CLAUDE.md  README.md  bot.py  config.py  pyproject.toml
backup/: characters_old.json  rules_old_v2.md
game/: __init__.py  characters.json  llm_player.py  logic.py  models.py  rules.md
